Hairline on selection when bidi text is involved https://bugs.webkit.org/show_bug.cgi?id=220548 <rdar://problem/73362060>

Reviewed by Antti Koivisto.

Due to webkit.org/b/251318, we may compute a slightly shorter selection rect for non-whitespace runs with soft wrap opportunities between them.
Such shrunk selection rects produce hairline gap at inline box boundaries.

* Source/WebCore/rendering/TextBoxPainter.cpp:
(WebCore::TextBoxPainter<TextBoxPath>::paintBackground): we've got _visual_ values here (at least with ignoring writing-mode), no need for directional pixel snapping.

Canonical link: https://commits.webkit.org/259537@main